--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Jurriaan Pruijs",
   "devDependencies": {
   	"gulp": "^3.9.0",
-  	"gulp-sass": "^2.1.0"
+  	"gulp-sass": "^2.1.0",
+  	"gulp-shell": "^0.5.1",
+  	"gulp-autoprefixer": "^3.1.0"
   }
 }
